# jpo2026

./: CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  requirements.txt
build-cmake/: CMakeCache.txt.prev  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/.cmake/api/v1/reply.prev/: cache-v2-d606e7fdf57214b131fd.json  cmakeFiles-v1-5bf48dc65830b4ef559e.json  codemodel-v2-d97ac6b54508fa608075.json  directory-.-Debug-d0250411c5c22ffaabfe.json  directory-_deps.googletest-build-Debug-c443a9d317adf09ee763.json  index-2026-04-20T13-50-57-0779.json  (+14 more)
build-cmake/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-cmake/.qtc_clangd/: compile_commands.json
build-cmake/PyScriptAI_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cmake/PyScriptAI_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_ollamaclient.cpp  moc_ollamaclient.cpp.d  moc_pythonexecutor.cpp  moc_pythonexecutor.cpp.d  moc_workerthread.cpp  moc_workerthread.cpp.d
build-cmake/PyScriptAI_autogen/include/: ui_mainwindow.h
build-cmake/Testing/Temporary/: CTestCostData.txt
build-cmake/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/tests/test_executor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cmake/tests/test_executor_autogen/VNU7RW3YIC/: moc_pythonexecutor.cpp  moc_pythonexecutor.cpp.d
build-cmake/tests/test_ollama_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cmake/tests/test_ollama_autogen/VNU7RW3YIC/: moc_ollamaclient.cpp  moc_ollamaclient.cpp.d
docs/: Doxyfile
docs/html/html/: annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_ollama_client-members.html  class_ollama_client.html  class_ollama_client.js  class_python_executor-members.html  class_python_executor.html  class_python_executor.js  class_worker_thread-members.html  class_worker_thread.html  class_worker_thread.js  classes.html  clipboard.js  config_8h.html  config_8h.js  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp_source.html  mainwindow_8cpp.html  mainwindow_8cpp_source.html  mainwindow_8h.html  mainwindow_8h_source.html  menudata.js  namespace_config.html  namespace_ui.html  (+21 more)
docs/html/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
examples/: example_prompts.txt
src/: config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ollamaclient.cpp  ollamaclient.h  pythonexecutor.cpp  pythonexecutor.h  workerthread.cpp  workerthread.h
tests/: CMakeLists.txt  test_executor.cpp  test_ollama.cpp
(+604 files in other folders)
